--- a/frontend/src/components/plants/PlantCard.css
+++ b/frontend/src/components/plants/PlantCard.css
@@ -46,6 +46,11 @@
   cursor: pointer;
 }
 
+.plant-card__edit-icon {
+  width: 18px;
+  height: 18px;
+}
+
 .plant-card__body {
   display: grid;
   grid-template-columns: auto 1fr;
@@ -117,6 +122,13 @@
   font-size: 12px;
   color: #8aa3c6;
   margin-top: 4px;
+}
+
+.plant-card__pump-status {
+  font-size: 12px;
+  color: #6bdba8;
+  margin-top: 4px;
+  font-weight: 600;
 }
 
 .plant-card__empty {
